# cs-dlp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: FUNDING.yml
coursera/: api.py  commandline.py  cookies.py  coursera_dl.py  credentials.py  downloaders.py  utils.py
coursera/test/: test_credentials.py  test_parsing.py  test_utils.py
cs-dlp/: api.py  cs-dlp  cs-dlp.bat  utils.py
cs_dlp/: __init__.py  api.py  commandline.py  cookies.py  coursera_dl.py  credentials.py  downloaders.py  main.py
cs_dlp/libs/: api.py  commandline.py  cookies.py  downloaders.py  extractors.py  filtering.py  formatting.py  playlist.py  utils.py  version.py  workflow.py
test/: test_api.py  test_commandline.py  test_cookies.py  test_credentials.py  test_downloaders.py  test_filter.py  test_parsing.py  test_utils.py  test_workflow.py  utils.py
