[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs-dlp"
dynamic = ["version"]
description = "Script for downloading Coursera.org videos and naming them."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    { name = "Raffaele Mancuso", email = "raffaelemancuso532@gmail.com" },
]
keywords = [
    "MOOCs",
    "coursera",
    "coursera-dl",
    "download",
    "education",
    "video",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]
dependencies = [
    "attrs>=18.1.0",
    "beautifulsoup4>=4.1.3",
    "browser_cookie3>=0.19.0",
    "configargparse>=0.12.0",
    "pyasn1>=0.1.7",
    "requests>=2.20",
    "urllib3>=1.23",
]

[project.optional-dependencies]
dev = [
    "coverage>=3.7",
    "mock>=1.0.1",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tox",
]

[project.scripts]
cs-dlp = "cs_dlp.coursera_dl:main"

[project.urls]
Homepage = "https://github.com/raffaem/cs-dlp"

[tool.hatch.version]
path = "cs_dlp/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cs_dlp",
    "/test"
]

[tool.hatch.build.targets.wheel]
packages = ["/cs_dlp"]

